styled dropdownmenu list and fixed top header size and spacing

--- a/style.css
+++ b/style.css
@@ -8,42 +8,56 @@ body {
     margin: 1% auto;
     background-color: #333333;
 }
+/* top Nav Bar */
 .top-header {
     border: solid 1px black;
     background-color: #555555;
     margin: 0;
-    height: 3;
-
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: flex-start;
+    flex-wrap: wrap;
 }
 .ul-links-list {
-    display: flex;
-    justify-content: center;
     font-size: 5vw;
     padding: 0;
+    margin: 0;
+    width: 25%;
+    display: flex;
+    justify-content: space-between;
 }
-.li-links {
-    margin: 0 7%;
+.li-social-links {
+    padding: 3%;
 }
+.li-social-links a:hover {
+    box-shadow: 1px 1px 5px;
+}
+/* navigation bar */
 .nav-header {
     border: solid 1px black;
     background-color: #444444;
-    font-size: 2.5vw;
+    font-size: 4vw;
     overflow: hidden;
+    padding: 0;
+    margin: 0;
 }
-/* .mobile-ul-nav {
-    display: none;
-} */
 .li-nav {
     color: white;
     padding: 14px 16px;
-    font-size: 17px;
     display: block;
+    border: 1px solid black;
+}
+.li-nav a {
+    color: black;
+    text-decoration: none;
 }
 .fa-bars {
     font-size: 8vw;
     display: block;
 }
-.topnav a:hover {
+.nav-header a:hover {
     background-color: #ddd;
     color: white;
 
